Adding WebClient Example